--- a/springboot-product/src/main/resources/application.properties
+++ b/springboot-product/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+
+zookeeper.address=192.168.5.124:2181,192.168.5.125:2181,192.168.5.126:2181
