--- a/springboot-web/pom.xml
+++ b/springboot-web/pom.xml
@@ -12,6 +12,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-x-discovery</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
